[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grunt"
version = "0.1.0"
description = "TUI Task & Memo Manager"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "python-frontmatter>=1.1.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
grunt = "grunt.main:main"

[tool.hatch.build.targets.wheel]
packages = ["grunt"]
